   
   o  Fixed bug in BreuschPaganTest() that prevented dialog from functioning (reported by Michel Pouchain).
   
Version 1.4-10

   o  Corrected problem in paste in Command window in non-Windows systems (reported by Liviu Andronic).
   
   o  Fixed handling of X11 warnings which was disrupted by showData(), and added check for "Warning in structure" (problems reported by Liviu Andronic).
   
   o  Prefixes used when output is directed to the R console are no longer hard-coded, but can be set by the "prefixes" Rcmdr option (to satisfy a request by Liviu Andronic).

Version 1.4-11

   o  Correction to .mo file for Brazilian Portuguese translation (supplied by Adriano Azevedo-Filho following report by Donald Pianto).
   
   o  Added summary() output to principal components (suggested by Liviu Andronic).
   
Version 1.5-0

   o  Added model-selection dialogs, stepwise and subset (several requests).
   
   o  Modifications to model-definition dialogs (suggested by Ulrike Gromping).
   
   o  The compare-models and Anova-table code for GLMs now uses F-tests when the dispersion parameter is estimated (after a suggstion by Ulrich Halekoh).
   
   o  Added optional pairwise p-values to correlations dialog (several requests); new rcorr.adjust() function, adapted from code sent by Robert A. Muenchen.
   
   o  New Library() command for loading packages. Packages generally attached in position 4, to avoid masking objects in Rcmdr and car.
   
   o  Messages in the Messages window are now numbered, according to the Rcmdr number.messages option (suggested by Liviu Andronic).
   
   o  Added dialog box to merge rows and columns, along with mergeRows() function (after a suggestion by Stephen Shamblen).
   
   o  Added aggregate dialog box to aggregate variables by factor(s) (after a suggestion by Stephen Shamblen).
   
   o  Added variable.list.width option (suggested by Liviu Andronic).
   
   o  Small changes.
   